<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".info.InfoActivity">

    <ImageView
        android:id="@+id/img_info"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/logo"
        android:layout_margin="12dp"/>

    <TextView
        android:id="@+id/txt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/moto"
        android:layout_below="@id/img_info"
        android:gravity="center"
        android:background="@color/green_500"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        android:padding="12dp"/>

    <TextView
        android:id="@+id/txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/background_info"
        android:layout_below="@id/txt1"
        android:layout_marginTop="12dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginLeft="12dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/background"
        android:layout_margin="12sp"
        android:layout_below="@id/txt2"
        android:textSize="16sp"/>

</RelativeLayout>