<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".diagnosa.hasil.HasilDiagnosaActivity">

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/green_500"
        android:layout_margin="12dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/anda_mengalami"
            android:layout_margin="5dp"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/tv_hasilPenyakit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/penyakit"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <TextView
        android:id="@+id/txt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rekomendasi_rumah_sakit"
        android:layout_below="@id/ll1"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:textSize="16sp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_rumahSakit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/item_rumah_sakit"
        android:layout_below="@id/txt1"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"/>

</RelativeLayout>