<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="5dp"
    android:layout_margin="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green_500">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatar_rumahSakit"
            android:layout_width="55dp"
            android:layout_height="55dp"
            tools:src="@color/green_200"
            android:layout_margin="8dp"/>
        <LinearLayout
            android:layout_toEndOf="@id/avatar_rumahSakit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_rumahSakit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rumah_sakit"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv_jarak_rumahsakit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jarak_meter"
                    android:textSize="14sp"
                    android:layout_marginRight="10dp"
                    android:textColor="@color/white"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/km"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>

            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>


</androidx.cardview.widget.CardView>