<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <ImageView
        android:id="@+id/img_home"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        tools:src="@drawable/posterhome"
        android:layout_marginBottom="80dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_diagnosa"
        android:layout_width="126dp"
        android:layout_height="126dp"
        android:layout_below="@+id/img_home"
        android:layout_marginLeft="50dp"
        app:cardCornerRadius="10dp"
        android:layout_marginBottom="40dp">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/green_500">
            <ImageView
                android:id="@+id/img_diagnosa"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:src="@drawable/ic_baseline_broken_image_24"
                android:layout_margin="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diagnosa"
                android:layout_below="@id/img_diagnosa"
                android:layout_margin="5dp"
                android:textSize="18sp"
                android:layout_centerHorizontal="true"
                android:textColor="@color/white"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_rumahSakit"
        android:layout_width="126dp"
        android:layout_height="126dp"
        android:layout_below="@+id/img_home"
        android:layout_marginLeft="60dp"
        app:cardCornerRadius="10dp"
        android:layout_toRightOf="@id/cv_diagnosa"
        android:layout_marginBottom="40dp">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/green_500">
            <ImageView
                android:id="@+id/img_rumahSakit"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:src="@drawable/ic_baseline_broken_image_24"
                android:layout_margin="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rumah_sakit"
                android:layout_below="@id/img_rumahSakit"
                android:layout_margin="5dp"
                android:textSize="18sp"
                android:layout_centerHorizontal="true"
                android:textColor="@color/white"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_penyakit"
        android:layout_width="126dp"
        android:layout_height="126dp"
        android:layout_below="@+id/cv_diagnosa"
        android:layout_marginLeft="50dp"
        app:cardCornerRadius="10dp">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/green_500">
            <ImageView
                android:id="@+id/img_penyakit"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:src="@drawable/ic_baseline_broken_image_24"
                android:layout_margin="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/penyakit"
                android:layout_below="@id/img_penyakit"
                android:layout_margin="5dp"
                android:textSize="18sp"
                android:layout_centerHorizontal="true"
                android:textColor="@color/white"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_info"
        android:layout_width="126dp"
        android:layout_height="126dp"
        android:layout_below="@+id/cv_rumahSakit"
        android:layout_toEndOf="@id/cv_penyakit"
        android:layout_marginLeft="60dp"
        app:cardCornerRadius="10dp">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/green_500">
            <ImageView
                android:id="@+id/img_info"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:src="@drawable/ic_baseline_broken_image_24"
                android:layout_margin="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info"
                android:layout_below="@id/img_info"
                android:layout_margin="5dp"
                android:textSize="18sp"
                android:layout_centerHorizontal="true"
                android:textColor="@color/white"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>